# metagraphed

./: .gitignore  .prettierignore  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  package-lock.json  package.json  server.json  vitest.config.mjs  wrangler.data.jsonc  wrangler.jsonc
apps/indexer-rs/: Cargo.toml
apps/indexer-rs/src/: lib.rs  main.rs
deploy/: chain-firehose-relay.Dockerfile
docs/: api-stability.md  backend-artifact-contracts.md  beta-roadmap.md  block-explorer-data-model.md  realtime-firehose.md
public/: llms-full.txt  llms.txt
schemas/: api-components.schema.json  provider.schema.json
scripts/: artifact-budgets.mjs  backfill-events.py  backfill-registry-postgres.mjs  build-artifacts.mjs  build.mjs  chain-firehose-relay.mjs  data-refresh-node-entrypoint.sh  datasets.mjs  deploy-worker-with-sourcemaps.sh  discover-testnet-surfaces.mjs  dispatch-webhooks.mjs  economics-refresh-entrypoint.sh  export-parquet.mjs  fetch-events.py  generate-client.mjs  generate-types.mjs  index-chain.py  lib.mjs  observability.mjs  pipeline.mjs  private-boundary-patterns.mjs  promote-reviewed.mjs  reconcile-neurons.mjs  refresh-economics.mjs  refresh-native-snapshot.mjs  scan-public-safety.mjs  sign-staged-neurons.mjs  smoke-live-api.mjs  snapshot-adapters.mjs  snapshot-openapi.mjs  stream-events.py  submission-policy.mjs  sync-registry-to-postgres.mjs  test_fetch_events.py  test_index_chain.py  test_stream_events.py  validate-api.mjs  validate-client-sdk-sync.mjs  validate-contract-drift.mjs  validate-mcp.mjs  (+5 more)
src/: account-deregistrations.mjs  account-events.mjs  account-serving.mjs  account-stake-flow.mjs  accounts-list.mjs  alpha-volume.mjs  analytics-live.mjs  artifact-storage.mjs  blocks-summary.mjs  blocks.mjs  chain-alpha-volume.mjs  chain-axon-removals.mjs  chain-event-args.mjs  chain-event-summary.mjs  (+35 more)
(+381 files in other folders)
